k8s/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kmatch-backend-dep
  namespace: production
  labels:
    app: kmatch-backend
spec:
  selector:
    matchLabels:
      app: kmatch-backend
  template:
    metadata:
      labels:
        app: kmatch-backend
    spec:
      containers:
        - name: kmatch-backend-app
          image: gcr.io/bamboo-archery-350015/kmatch-backend-production
          imagePullPolicy: Always
          ports:
            - name: http-server
              containerPort: 80
      terminationGracePeriodSeconds: 30
