k8s/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kmatch-backend-service
  labels:
    app: kmatch-backend
  namespace: production
spec:
  selector:
    app: kmatch-backend
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
